# SoftRasterizer

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  README.md  计划.md
.claude/: settings.local.json
.github/: copilot-instructions.md
MFCDemo/: CMakeLists.txt
MFCDemo/include/: HDRPresenter.h  RenderView.h
MFCDemo/src/: HDRPresenter.cpp  RenderView.cpp  WinMain.cpp
SoftRenderer/: CMakeLists.txt
SoftRenderer/include/: SoftRenderer.h  SoftRendererExport.h
SoftRenderer/include/Asset/: BufferAccessor.h  BufferAccessor.inl  EXRDecoder.h  GLTFAsset.h  GLTFLoader.h  GLTFTypes.h  ImageDecoder.h  JSONParser.h
SoftRenderer/include/Camera/: OrbitCamera.h
SoftRenderer/include/Core/: DepthBuffer.h  Framebuffer.h  HDRImage.h  Texture.h
SoftRenderer/include/Material/: PBRMaterial.h
SoftRenderer/include/Math/: Mat4.h  Vec2.h  Vec3.h  Vec4.h
SoftRenderer/include/Pipeline/: Clipper.h  EnvironmentMap.h  FragmentShader.h  FrameContext.h  GeometryProcessor.h  MaterialTable.h  OpaquePass.h  PassBuilder.h  Rasterizer.h  RenderPass.h  VertexShader.h
SoftRenderer/include/Render/: FrameContextBuilder.h  GPUSceneRenderQueueBuilder.h  PassContext.h  RenderPipeline.h  RenderQueueBuilder.h  RendererConfig.h
SoftRenderer/include/Runtime/: GPUScene.h  GPUSceneBuilder.h  MaterialPool.h  MeshPool.h  ResourcePool.h  TexturePool.h
SoftRenderer/include/Scene/: LightGroup.h  Mesh.h  Model.h  ObjectGroup.h  RenderQueue.h  Scene.h  SceneManager.h  TextureBinding.h  Transform.h  Vertex.h
SoftRenderer/include/Utils/: Compression.h  DebugLog.h  MathUtils.h  PBRUtils.h  TextureSampler.h
SoftRenderer/src/: Renderer.cpp
SoftRenderer/src/Asset/: EXRDecoder.cpp  GLTFLoader.cpp  ImageDecoder.cpp  JSONParser.cpp
SoftRenderer/src/Camera/: OrbitCamera.cpp
SoftRenderer/src/Core/: DepthBuffer.cpp  Framebuffer.cpp  Texture.cpp
SoftRenderer/src/Material/: PBRMaterial.cpp
SoftRenderer/src/Math/: Mat4.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
SoftRenderer/src/Pipeline/: Clipper.cpp  EnvironmentMap.cpp  FragmentShader.cpp  GeometryProcessor.cpp  MaterialTable.cpp  OpaquePass.cpp  PassBuilder.cpp  Rasterizer.cpp  VertexShader.cpp
SoftRenderer/src/Render/: FrameContextBuilder.cpp  GPUSceneRenderQueueBuilder.cpp  RenderPipeline.cpp  RenderQueueBuilder.cpp  RendererConfig.cpp
SoftRenderer/src/Runtime/: GPUScene.cpp  GPUSceneBuilder.cpp
SoftRenderer/src/Scene/: LightGroup.cpp  Mesh.cpp  Model.cpp  ObjectGroup.cpp  RenderQueue.cpp  Scene.cpp  SceneManager.cpp  Transform.cpp
SoftRenderer/src/Utils/: Compression.cpp
openspec/: config.yaml
openspec/changes/arch-comprehensive-optimization/: proposal.md
openspec/changes/archive/2026-02-26-arch-refactor-reduce-hardcode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-26-arch-refactor-reduce-hardcode/specs/pass-pipeline/: spec.md
openspec/changes/archive/2026-02-26-arch-refactor-reduce-hardcode/specs/resource-pool/: spec.md
openspec/changes/archive/2026-02-26-arch-refactor-reduce-hardcode/specs/texture-binding/: spec.md
openspec/changes/archive/2026-02-26-codebase-cleanup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-26-codebase-cleanup/specs/codebase-maintenance/: spec.md
openspec/changes/archive/2026-02-26-pipeline-architecture-optimization/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-26-pipeline-architecture-optimization/specs/material-table/: spec.md
openspec/changes/archive/2026-02-26-pipeline-architecture-optimization/specs/pass-pipeline/: spec.md
openspec/changes/archive/2026-02-26-pipeline-architecture-optimization/specs/resource-pool/: spec.md
openspec/changes/archive/2026-02-26-pipeline-architecture-optimization/specs/tile-shading/: spec.md
openspec/changes/archive/2026-02-26-remove-material-table-mutex/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-26-remove-material-table-mutex/specs/lock-free-geometry/: spec.md
openspec/changes/archive/2026-02-26-remove-material-table-mutex/specs/pass-pipeline/: spec.md
openspec/changes/archive/2026-02-27-optimize-openmp-without-tbb/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-27-optimize-openmp-without-tbb/specs/openmp-tuning/: spec.md
openspec/changes/archive/2026-02-27-optimize-openmp-without-tbb/specs/tile-shading/: spec.md
openspec/changes/hybrid-core-openmp-optimization/: design.md  proposal.md  tasks.md
openspec/changes/hybrid-core-openmp-optimization/specs/hybrid-affinity/: spec.md
openspec/changes/hybrid-core-openmp-optimization/specs/openmp-tuning/: spec.md
openspec/changes/pipeline-architecture-optimization/: tasks.md
openspec/specs/gltf-enums/: spec.md
openspec/specs/openmp-tuning/: spec.md
openspec/specs/pass-pipeline/: spec.md
openspec/specs/resource-pool/: spec.md
openspec/specs/shared-utils/: spec.md
openspec/specs/tile-shading/: spec.md
